--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 				<p>Dedicated to leading process operations in the Energy and Mining industries</p>
 				<div class="p-5 social-icons">
 					<a target="_blank" href="https://www.linkedin.com/in/arafehr/" aria-label="My linkedin"><i class="fab fa-linkedin fa-3x socialicons"></i></a>
-					<a target="_blank" href="https://github.com/arafehr" aria-label="My twitter"><i class="fa-regular fa-envelope fa-3x socialicons"></i></a>		
-					<a target="_blank" href="mailto:arrahat@mun.ca" aria-label="My github"><i class="fab fa-github fa-3x socialicons"></i></a>
+					<a target="_blank" href="mailto:arrahat@mun.ca" aria-label="My twitter"><i class="fa-regular fa-envelope fa-3x socialicons"></i></a>		
+					<a target="_blank" href="https://github.com/arafehr" aria-label="My github"><i class="fab fa-github fa-3x socialicons"></i></a>
 				</div>
 				<a class="btn btn-outline-light btn-lg" href="#" role="button" aria-label="Learn more about me">More about me</a>
 			</div>
@@ -82,15 +82,15 @@
 				<div class="col-md-6">
 					<h2 class="display-4 mb-5 text-center">Education</h2>
 					<p class="lead text-center">
-						Bachelor of Engineering (Process) - Memorial University of Newfoundland (Co-op Program) May 2018 - Class of 2024 - St. John's, NL
+						Bachelor of Engineering (Process) - Memorial University of Newfoundland (Co-op Program) May 2018 Class of 2024 - St. John's, NL
 					</p>
 					<hr>
 					<p class="lead text-center">
-						Machine Learning - Stanford University => December 2020 - March 2021
+						Machine Learning - Stanford University December 2020 - March 2021
 					</p>
 					<hr>
 					<p class="lead text-center">
-						Bachelor of Engineering - Kansas State University Manhattan, Kansas
+						Bachelor of Engineering - Kansas State University, Manhattan, Kansas
 					</p>
 				</div>
 			</div>
@@ -101,12 +101,12 @@
 	<!-- EXPERIENCES START -->
 	<div id="experience" class="py-3">
 		<div class="container py-5">
-			<h2 class="display-4 mb-5 text-center">Experiences</h2>
+			<h2 class="display-4 mb-5 text-center">Relevant Experience</h2>
 			<div class="row">
 				<div class="col-md-6">
 					<div class="card shadow-lg p-3 mb-5 bg-white rounded card">
 						<div class="card-body">
-							<h4 class="card-title py-3">Technical Services Engineering Intern Braya Renewable Fuels</h4>
+							<h4 class="card-title py-3">Technical Services Engineering Intern <br>Braya Renewable Fuels</h4>
 							<span class="btn btn-outline-secondary mb-3">January 2024 - May 2024</span>
 							<hr>
 							<div class="pt-3">
@@ -118,7 +118,7 @@
 				<div class="col-md-6">
 					<div class="card shadow-lg p-3 mb-5 bg-white rounded card">
 						<div class="card-body">
-							<h4 class="card-title py-3">Process Safety Engineering <br>Intern Vale Base Metals</h4>
+							<h4 class="card-title py-3">Process Safety Engineering Intern <br>Vale Base Metals</h4>
 							<span class="btn btn-outline-secondary mb-3">January 2023 - August 2023</span>
 							<hr>
 							<div class="pt-3">
@@ -130,7 +130,7 @@
 				<div class="col-md-6">
 					<div class="card shadow-lg p-3 mb-5 bg-white rounded card">
 						<div class="card-body">
-							<h4 class="card-title py-3">Co-op Engineering Student Hibernia Enhanced Oil Recovery Group at Memorial University</h4>
+							<h4 class="card-title py-3">Co-op Engineering Student <br>Hibernia Enhanced Oil Recovery Group</h4>
 							<span class="btn btn-outline-secondary mb-3">May 2022 - August 2022</span>
 							<hr>
 							<div class="pt-3">
@@ -142,7 +142,7 @@
 				<div class="col-md-6">
 					<div class="card shadow-lg p-3 mb-5 bg-white rounded card">
 						<div class="card-body">
-							<h4 class="card-title py-3">Production Associate F&P <br>Manufacturing Inc</h4>
+							<h4 class="card-title py-3">Production Associate <br>F&P Manufacturing Inc</h4>
 							<span class="btn btn-outline-secondary mb-3">September 2018 - December 2018</span>
 							<hr>
 							<div class="pt-3">
@@ -161,13 +161,13 @@
 		<div class="container py-5">
 			<div class="container">
 				<h2 class="display-4 pb-5 text-center">Professional Certifications</h2>
-				<div class="row">
+				<div class="row justify-content-center">
 					<div class="col-md-6">
 						<div class="card shadow-lg p-3 mb-5 bg-white rounded card">
 							<div class="card-body">
 								<h4 class="card-title mb-3">Tech Stewardship for the Energy Transition Program - Energy Futures Lab</h4>
 								<hr>
-								<a class="btn btn-outline-dark btn-md" href="images/pro1.jpg" target="_blank" aria-label="View More">View More</a>
+								<a class="btn btn-outline-dark btn-md" href="images/pro4.jpg" target="_blank" aria-label="View More">View More</a>
 							</div>
 						</div>
 					</div>
@@ -176,7 +176,7 @@
 							<div class="card-body">
 								<h4 class="card-title mb-3">CPR/AED/First Aid - St. John Ambulance Canada | Ambulance Saint-Jean</h4>
 								<hr>
-								<a class="btn btn-outline-dark btn-md" href="images/pro2.jpg" target="_blank" aria-label="View More">View More</a>
+								<a class="btn btn-outline-dark btn-md" href="images/pro1.jpg" target="_blank" aria-label="View More">View More</a>
 							</div>
 						</div>
 					</div>
@@ -185,7 +185,7 @@
 							<div class="card-body">
 								<h4 class="card-title mb-3">Certified Associate in Project Management - Project Management Institute</h4>
 								<hr>
-								<a class="btn btn-outline-dark btn-md" href="images/pro3.jpg" target="_blank" aria-label="View More">View More</a>
+								<a class="btn btn-outline-dark btn-md" href="images/pro2.jpg" target="_blank" aria-label="View More">View More</a>
 							</div>
 						</div>
 					</div>
@@ -194,7 +194,7 @@
 							<div class="card-body">
 								<h4 class="card-title mb-3">Certified Solidworks Associate CSWA (Mechanical Design) - Dassault Systèmes</h4>
 								<hr>
-								<a class="btn btn-outline-dark btn-md" href="images/pro4.jpg" target="_blank" aria-label="View More">View More</a>
+								<a class="btn btn-outline-dark btn-md" href="images/pro3.jpg" target="_blank" aria-label="View More">View More</a>
 							</div>
 						</div>
 					</div>
@@ -217,7 +217,7 @@
 	<div id="projects" class="py-3">
 		<div class="container py-5">
 			<div class="container">
-				<h2 class="display-4 pb-5 text-center">Recent Projects</h2>
+				<h2 class="display-4 pb-5 text-center">Technical Projects</h2>
 				<div class="row">
 					<div class="col-md-6 mb-5">
 						<div class="card shadow-lg p-3 bg-white rounded card h-100">
@@ -345,6 +345,24 @@
 					</div>
 					<div class="progress">
 						<div class="progress-bar" role="progressbar" aria-label="Example with label" style="max-width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+					</div>
+				</div>
+				<div class="col-md-6 mb-5">
+					<div class="d-flex justify-content-between">
+						<h6>HTML/CSS</h6>
+						<h6>60%</h6>
+					</div>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-label="Example with label" style="max-width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="60"></div>
+					</div>
+				</div>
+				<div class="col-md-6 mb-5">
+					<div class="d-flex justify-content-between">
+						<h6>JavaScript</h6>
+						<h6>50%</h6>
+					</div>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-label="Example with label" style="max-width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>
 					</div>
 				</div>
 			</div>
