--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<div class="col-md-6">
 					<h2 class="display-4 mb-5 text-center">Education</h2>
 					<p class="lead text-center">
-						Bachelor of Engineering (Process) - Memorial University of Newfoundland (Co-op Program) May 2018 Class of 2024 - St. John's, NL
+						Bachelor of Engineering (Process) - Memorial University of Newfoundland (Co-op Program) May 2018 - Class of 2024 - St. John's, NL
 					</p>
 					<hr>
 					<p class="lead text-center">
@@ -90,7 +90,7 @@
 					</p>
 					<hr>
 					<p class="lead text-center">
-						Bachelor of Engineering - Kansas State University, Manhattan, Kansas
+						Bachelor of Engineering - Ks State University, Manhattan, Ks
 					</p>
 				</div>
 			</div>
