--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 					<p class="lead text-center">
 						Abdul Rafeh has diverse hands-on experience in nickel/cobalt hydrometallurgy, iron ore pyrometallurgy, and downstream oil and gas, including one with a multinational mining company in Newfoundland and Labrador. He was integral in managing process safety dashboards and performing process engineering calculations relating to heat transfer, system hydraulics, mass and energy balance, and interpreting and redlining piping and instrumentation diagrams (P&IDs) and process flow diagrams (PFDs). He thrives on tackling challenges within and beyond the engineering field and is driven to collaborate across diverse platforms to develop sustainable, lifelong, cost-effective, and successful projects.
 					</p>
-					<!-- <p class="lead text-center">
-						<a class="btn btn-outline-dark btn-lg" href="https://docs.google.com/document/d/13_PWdhThMr6roxb-UFiJj4YAFOj8e_bv3Vx9UHQdyBQ/edit?usp=sharing" target="_blank" aria-label="Resume/CV">Resume</a>
-					</p> -->
+					<p class="lead text-center">
+						<a class="btn btn-outline-dark btn-lg" href="#" target="_blank" aria-label="Resume/CV">Resume</a>
+					</p>
 				</div>
 			</div>
 		</div>
