--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 					</p>
 					<hr>
 					<p class="lead text-center">
-						Machine Learning - Stanford University December 2020 - March 2021
+						Machine Learning - Stanford University, December 2020 - March 2021
 					</p>
 					<hr>
 					<p class="lead text-center">
-						Bachelor of Engineering - Ks State University, Manhattan, Ks
+						Bachelor of Engineering - Kansas State University, Manhattan, KS
 					</p>
 				</div>
 			</div>
