--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
                 <div class="col-lg-7">
                     <h2 class="display-4 mb-5 text-center">About Me</h2>
                     <p class="lead text-center">
-                        Abdul Rafeh has diverse hands-on experience in nickel/cobalt hydrometallurgy, iron ore pyrometallurgy, and downstream oil and gas, including one with a multinational mining company in Newfoundland and Labrador. He was integral in managing process safety
-                        dashboards and performing process engineering calculations relating to heat transfer, system hydraulics, mass and energy balance, and interpreting and redlining piping and instrumentation diagrams (P&IDs) and process flow diagrams
-                        (PFDs). He thrives on tackling challenges within and beyond the engineering field and is driven to collaborate across diverse platforms to develop sustainable, lifelong, cost-effective, and successful projects.
+                        I am a dedicated enthusiast in the field of data engineering with a knack for building front-end and back-end applications. I have experience working with Python (PyTorch, NumPy), Object-Oriented Programming, JSON, Matlab, Linux, C++, Amazon Web Services
+                        (AWS), SQL, XM, HTML, CSS, SASS and JavaScript. I am proficient across multiple operating systems, including Linux, MacOS, and Windows, enabling adaptability in diverse software environments. I have in-depth experience in platforms
+                        like GitHub and GitLab, ensuring efficient collaboration and code management in team environments and with diverse relational database systems, including PostgreSQL, SQL, and AirTable, facilitating efficient data management and
+                        analysis.
                     </p>
                     <p class="lead text-center">
                         <a class="btn btn-outline-dark btn-lg" href="#" target="_blank" aria-label="Resume/CV">Resume</a>
