--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
                     <h2 class="display-4 mb-5 text-center">Education</h2>
                     <p class="lead text-center">
                         Diploma in Software Engineering - Brainstation, January 2024 - August 2024
-                        <hr> Bachelor of Engineering (Process) - Memorial University of Newfoundland (Co-op Program) May 2021 - December 2023 - St. John's, NL
+                    </p>
+                    <hr>
+                    <p class="lead text-center">
+                        Bachelor of Engineering (Process) - Memorial University of Newfoundland (Co-op Program) May 2018 - Class of 2024 - St. John's, NL
                     </p>
                     <hr>
                     <p class="lead text-center">
