--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </p>
                     <hr>
                     <p class="lead text-center">
-                        Bachelor of Engineering (Process) - Memorial University of Newfoundland (Co-op Program) May 2018 - Class of 2024 - St. John's, NL
+                        Bachelor of Engineering (Process) - Memorial University of Newfoundland (Co-op Program) May 2021 - December 2023 - St. John's, NL
                     </p>
                     <hr>
                     <p class="lead text-center">
