--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <h2 class="display-4 mb-5 text-center">About Me</h2>
                     <p class="lead text-center">
                         I am a dedicated enthusiast in the field of data engineering with a knack for building front-end and back-end applications. I have experience working with Python (PyTorch, NumPy), Object-Oriented Programming, JSON, Matlab, Linux, C++, Amazon Web Services
-                        (AWS), SQL, XM, HTML, CSS, SASS and JavaScript. I am proficient across multiple operating systems, including Linux, MacOS, and Windows, enabling adaptability in diverse software environments. I have in-depth experience in platforms
+                        (AWS), SQL, XML, HTML, CSS, SASS and JavaScript. I am proficient across multiple operating systems, including Linux, MacOS, and Windows, enabling adaptability in diverse software environments. I have in-depth experience in platforms
                         like GitHub and GitLab, ensuring efficient collaboration and code management in team environments and with diverse relational database systems, including PostgreSQL, SQL, and AirTable, facilitating efficient data management and
                         analysis.
                     </p>
