--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="banner-detail">
             <div class="container">
                 <h1 class="display-1">Abdul Rafeh Rahat</h1>
-                <p>Dedicated to leading operations in the process industries</p>
+                <p>An aspiring enthusiast in the field of cybersecurity</p>
                 <div class="p-5 social-icons">
                     <a target="_blank" href="https://www.linkedin.com/in/arafehr/" aria-label="My linkedin"><i class="fab fa-linkedin fa-3x socialicons"></i></a>
                     <a target="_blank" href="mailto:arrahat@mun.ca" aria-label="My twitter"><i class="fa-regular fa-envelope fa-3x socialicons"></i></a>
