--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="col-lg-7">
                     <h2 class="display-4 mb-5 text-center">About Me</h2>
                     <p class="lead text-center">
-                        I am a dedicated enthusiast in the field of software engineering with a knack for building front-end and back-end applications. I have experience working with Python (PyTorch, NumPy), Object-Oriented Programming, JSON, Matlab, Linux, C++, Amazon Web Services
+                        I am a dedicated enthusiast in the field of software engineering with a knack for building front-end and back-end applications. I have experience working with Python (PyTorch, NumPy), Object-Oriented Programming, Matlab, Linux, C++, Amazon Web Services
                         (AWS), SQL, XML, HTML, CSS, SASS and JavaScript. I am proficient across multiple operating systems, including Linux, MacOS, and Windows, enabling adaptability in diverse software environments. My in-depth experience in platforms
                         like GitHub and GitLab is a testament to my collaborative skills. This experience ensures efficient code management and collaboration in team environments, coupled with my proficiency in diverse relational database systems, including
                         PostgreSQL, SQL, and AirTable, facilitating efficient data management and analysis.
@@ -104,12 +104,12 @@
     <!-- EXPERIENCES START -->
     <div id="experience" class="py-3">
         <div class="container py-5">
-            <h2 class="display-4 mb-5 text-center">Relevant Experience</h2>
+            <h2 class="display-4 mb-5 text-center">Technical Experience</h2>
             <div class="row">
                 <div class="col-md-6">
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
                         <div class="card-body">
-                            <h4 class="card-title py-3">Technical Services Engineering Intern <br>Braya Renewable Fuels</h4>
+                            <h4 class="card-title py-3">Full-Stack Developer<br>Plansane.com</h4>
                             <span class="btn btn-outline-secondary mb-3">January 2024 - May 2024</span>
                             <hr>
                             <div class="pt-3">
