--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
                         <div class="card-body">
                             <h4 class="card-title py-3">Full-Stack Developer<br>Plansane.com</h4>
-                            <span class="btn btn-outline-secondary mb-3">January 2024 - May 2024</span>
+                            <span class="btn btn-outline-secondary mb-3">January 2024 - Present</span>
                             <hr>
                             <div class="pt-3">
                                 <img class="w-50" src="images/experiences-img1.png" alt="profilepicture">
