--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="col-md-6">
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
                         <div class="card-body">
-                            <h4 class="card-title py-3">Full-Stack Developer<br>Plansane.com</h4>
+                            <h4 class="card-title py-3">Full-Stack Developer <br>Plansane.com</h4>
                             <span class="btn btn-outline-secondary mb-3">January 2024 - Present</span>
                             <hr>
                             <div class="pt-3">
@@ -145,7 +145,7 @@
                 <div class="col-md-6">
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
                         <div class="card-body">
-                            <h4 class="card-title py-3">Production Associate <br>F&P Manufacturing Inc</h4>
+                            <h4 class="card-title py-3">IT Help Desk Consultant <br>F&P Manufacturing Inc</h4>
                             <span class="btn btn-outline-secondary mb-3">September 2018 - December 2018</span>
                             <hr>
                             <div class="pt-3">
