--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                 <div class="col-md-6">
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
                         <div class="card-body">
-                            <h4 class="card-title py-3">IT Help Desk Consultant <br>F&P Manufacturing Inc</h4>
-                            <span class="btn btn-outline-secondary mb-3">September 2018 - December 2018</span>
+                            <h4 class="card-title py-3">IT Help Desk Consultant <br>Kansas State University</h4>
+                            <span class="btn btn-outline-secondary mb-3">January 2018 - September 2019</span>
                             <hr>
                             <div class="pt-3">
                                 <img class="w-50" src="images/experiences-img4.png" alt="profilepicture">
