--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
                     <div class="col-md-6">
                         <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
                             <div class="card-body">
-                                <h4 class="card-title mb-3">Data Analyst Professional Certificate - IBM</h4>
+                                <h4 class="card-title mb-3">Data Analyst Professional Certificate IBM
+                                </h4>
                                 <hr>
                                 <a class="btn btn-outline-dark btn-md" href="images/pro4.jpg" target="_blank" aria-label="View More">View More</a>
                             </div>
@@ -213,7 +214,7 @@
                     <div class="col-md-6">
                         <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
                             <div class="card-body">
-                                <h4 class="card-title mb-3">Machine Learning - Stanford University</h4>
+                                <h4 class="card-title mb-3">Machine Learning Stanford University</h4>
                                 <hr>
                                 <a class="btn btn-outline-dark btn-md" href="images/pro5.jpg" target="_blank" aria-label="View More">View More</a>
                             </div>
