--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
                     <div class="col-md-6">
                         <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
                             <div class="card-body">
-                                <h4 class="card-title mb-3">Machine Learning</h4>
-                                <h4 class="card-title mb-3">Stanford University</h4>
+                                <h4 class="card-title mb-1" style="margin-bottom: 0.5rem;">Machine Learning</h4>
+                                <h4 class="card-title mb-1" style="margin-top: 0;">Stanford University</h4>
                                 <hr>
                             </div>
                             <a class="btn btn-outline-dark btn-md" href="images/pro5.jpg" target="_blank" aria-label="View More">View More</a>
