--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 <body>
 
     <!-- HEADER START -->
-    <header class="web-header" style="background-color: #f8f9fa; padding: 10px 0;">
-        <nav class="px-3 fixed-top navbar-nav-scroll navbar navbar-expand-lg navbar-light">
-            <a href="index.html" class="navbar-brand" style="font-weight: bold;">Abdul Rafeh</a>
+    <header class="web-header">
+        <nav class="px-3 fixed-top navbar-nav-scroll navbar-transparent navbar navbar-expand-lg navbar-light">
+            <a href="index.html" class="navbar-brand navbar-brand">Abdul Rafeh</a>
             <button aria-controls="basic-navbar-nav" type="button" aria-label="Toggle navigation" class="toggler navbar-toggler collapsed">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+				<span class="navbar-toggler-icon"></span>
+			</button>
             <div class="navbar-collapse collapse" id="basic-navbar-nav">
-                <div class="navbar-nav mr-auto">
-                    <a href="#aboutme" class="nav-link" style="font-weight: bold;"><span class="nav-item lead">About me</span></a>
-                    <a href="#education" class="nav-link" style="font-weight: bold;"><span class="nav-item lead">Education</span></a>
-                    <a href="#experience" class="nav-link" style="font-weight: bold;"><span class="nav-item lead">Experiences</span></a>
-                    <a href="#Professional_Certifications" class="nav-link" style="font-weight: bold;"><span class="nav-item lead">Technical Projects</span></a>
-                    <a href="#projects" class="nav-link" style="font-weight: bold;"><span class="nav-item lead">Professional Certifications</span></a>
-                    <a href="#Technical_Skills" class="nav-link" style="font-weight: bold;"><span class="nav-item lead">Technical Skills</span></a>
+                <div class="navbar-nav mr-auto navbar-nav">
+                    <a href="#aboutme" class="nav-link"><span class="nav-item lead">About me</span></a>
+                    <a href="#education" class="nav-link"><span class="nav-item lead">Education </span></a>
+                    <a href="#experience" class="nav-link"><span class="nav-item lead">Experiences</span></a>
+                    <a href="#Professional_Certifications" class="nav-link"><span class="nav-item lead">Technical Projects</span></a>
+                    <a href="#projects" class="nav-link"><span class="nav-item lead">Professional Certifications</span></a>
+                    <a href="#Technical_Skills" class="nav-link"><span class="nav-item lead">Technical Skills</span></a>
                 </div>
             </div>
         </nav>
