--- a/index.html
+++ b/index.html
@@ -107,49 +107,49 @@
             <h2 class="display-4 mb-5 text-center">Technical Experience</h2>
             <div class="row">
                 <div class="col-md-6">
-                    <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
+                    <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                         <div class="card-body">
                             <h4 class="card-title py-3">Full-Stack Developer <br>Plansane.com</h4>
                             <span class="btn btn-outline-secondary mb-3">January 2024 - Present</span>
                             <hr>
                             <div class="pt-3">
-                                <img class="w-50" src="images/experiences-img1.png" alt="profilepicture">
+                                <img class="experience-img w-50" src="images/experiences-img1.png" alt="profilepicture">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
+                    <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                         <div class="card-body">
                             <h4 class="card-title py-3">Process Safety Engineering Intern <br>Vale Base Metals</h4>
                             <span class="btn btn-outline-secondary mb-3">January 2023 - August 2023</span>
                             <hr>
                             <div class="pt-3">
-                                <img class="w-50" src="images/experiences-img2.png" alt="profilepicture">
+                                <img class="experience-img w-50" src="images/experiences-img2.png" alt="profilepicture">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
+                    <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                         <div class="card-body">
                             <h4 class="card-title py-3">Co-op Engineering Student <br>Hibernia Enhanced Oil Recovery Group</h4>
                             <span class="btn btn-outline-secondary mb-3">May 2022 - August 2022</span>
                             <hr>
                             <div class="pt-3">
-                                <img class="w-50" src="images/experiences-img3.png" alt="profilepicture">
+                                <img class="experience-img w-50" src="images/experiences-img3.png" alt="profilepicture">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
+                    <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                         <div class="card-body">
                             <h4 class="card-title py-3">IT Help Desk Consultant <br>Kansas State University</h4>
                             <span class="btn btn-outline-secondary mb-3">January 2018 - September 2019</span>
                             <hr>
                             <div class="pt-3">
-                                <img class="w-50" src="images/experiences-img4.png" alt="profilepicture">
+                                <img class="experience-img w-50" src="images/experiences-img4.png" alt="profilepicture">
                             </div>
                         </div>
                     </div>
