--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     </div>
     <!-- EDUCATION END -->
 
+
     <!-- EXPERIENCES START -->
     <div id="experience" class="py-3">
         <div class="container py-5">
@@ -113,7 +114,7 @@
                             <span class="btn btn-outline-secondary mb-3">January 2024 - Present</span>
                             <hr>
                             <div class="pt-3">
-                                <img class="experience-img w-50" src="images/experiences-img1.png" alt="profilepicture">
+                                <img class="experience-img" src="images/experiences-img1.png" alt="profilepicture">
                             </div>
                         </div>
                     </div>
@@ -125,7 +126,7 @@
                             <span class="btn btn-outline-secondary mb-3">January 2023 - August 2023</span>
                             <hr>
                             <div class="pt-3">
-                                <img class="experience-img w-50" src="images/experiences-img2.png" alt="profilepicture">
+                                <img class="experience-img" src="images/experiences-img2.png" alt="profilepicture">
                             </div>
                         </div>
                     </div>
@@ -137,7 +138,7 @@
                             <span class="btn btn-outline-secondary mb-3">May 2022 - August 2022</span>
                             <hr>
                             <div class="pt-3">
-                                <img class="experience-img w-50" src="images/experiences-img3.png" alt="profilepicture">
+                                <img class="experience-img" src="images/experiences-img3.png" alt="profilepicture">
                             </div>
                         </div>
                     </div>
@@ -149,7 +150,7 @@
                             <span class="btn btn-outline-secondary mb-3">January 2018 - September 2019</span>
                             <hr>
                             <div class="pt-3">
-                                <img class="experience-img w-50" src="images/experiences-img4.png" alt="profilepicture">
+                                <img class="experience-img" src="images/experiences-img4.png" alt="profilepicture">
                             </div>
                         </div>
                     </div>
@@ -158,6 +159,16 @@
         </div>
     </div>
     <!-- EXPERIENCES END -->
+
+    <style>
+        .experience-img {
+            height: 255px;
+            width: auto;
+            /* Maintains the aspect ratio */
+            object-fit: cover;
+            /* Ensures the image covers the specified height */
+        }
+    </style>
 
     <!-- Professional Certifications START -->
     <div id="Professional_Certifications" class="py-3 bg-light">
