--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <body>
 
     <!-- HEADER START -->
-    <header class="web-header">
+    <header class="web-header" style="background-color: blue;">
         <nav class="px-3 fixed-top navbar-nav-scroll navbar-transparent navbar navbar-expand-lg navbar-light">
-            <a href="index.html" class="navbar-brand navbar-brand">Abdul Rafeh</a>
+            <a href="index.html" class="navbar-brand">Abdul Rafeh</a>
             <button aria-controls="basic-navbar-nav" type="button" aria-label="Toggle navigation" class="toggler navbar-toggler collapsed">
-				<span class="navbar-toggler-icon"></span>
-			</button>
+            <span class="navbar-toggler-icon"></span>
+        </button>
             <div class="navbar-collapse collapse" id="basic-navbar-nav">
-                <div class="navbar-nav mr-auto navbar-nav">
+                <div class="navbar-nav mr-auto">
                     <a href="#aboutme" class="nav-link"><span class="nav-item lead">About me</span></a>
                     <a href="#education" class="nav-link"><span class="nav-item lead">Education </span></a>
                     <a href="#experience" class="nav-link"><span class="nav-item lead">Experiences</span></a>
@@ -111,7 +111,7 @@
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                         <div class="card-body">
                             <h4 class="card-title py-3">Full-Stack Developer <br>Plansane.com</h4>
-                            <span class="btn btn-outline-secondary mb-3">January 2024 - Present</span>
+                            <span class="btn btn-outline-secondary mb-3">August 2023 - Present</span>
                             <hr>
                             <div class="pt-3">
                                 <img class="experience-img" src="images/experiences-img1.png" alt="profilepicture">
