--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                 <p>An aspiring enthusiast in the field of cybersecurity</p>
                 <div class="p-5 social-icons">
                     <a target="_blank" href="https://www.linkedin.com/in/arafehr/" aria-label="My linkedin"><i class="fab fa-linkedin fa-3x socialicons"></i></a>
-                    <a target="_blank" href="mailto:arrahat@mun.ca" aria-label="My twitter"><i class="fa-regular fa-envelope fa-3x socialicons"></i></a>
+                    <a target="_blank" href="mailto:arrahat@mun.ca" aria-label="My email"><i class="fa-regular fa-envelope fa-3x socialicons"></i></a>
                     <a target="_blank" href="https://github.com/arafehr" aria-label="My github"><i class="fab fa-github fa-3x socialicons"></i></a>
                 </div>
-                <a class="btn btn-outline-light btn-lg" href="#" role="button" aria-label="Learn more about me">More about me</a>
+                <a class="btn btn-outline-light btn-lg" href="#aboutme" role="button" aria-label="Learn more about me">More about me</a>
             </div>
         </div>
     </section>
