--- a/index.html
+++ b/index.html
@@ -179,62 +179,62 @@
                     <div class="col-md-6">
                         <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
                             <div class="card-body">
-                                <h4 class="card-title mb-3">Data Analyst Professional Certificate - IBM
-                                </h4>
+                                <h4 class="card-title mb-1" style="margin-bottom: 0.2rem;">Data Analyst Professional Certificate <br>IBM</h4>
                                 <hr>
-                                <a class="btn btn-outline-dark btn-md" href="images/pro4.jpg" target="_blank" aria-label="View More">View More</a>
                             </div>
+                            <a class="btn btn-outline-dark btn-md" href="images/pro4.jpg" target="_blank" aria-label="View More">View More</a>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
-                            <div class="card-body">
-                                <h4 class="card-title mb-3">Tech Stewardship for the Energy Transition Program - Energy Futures Lab</h4>
-                                <hr>
-                                <a class="btn btn-outline-dark btn-md" href="images/pro4.jpg" target="_blank" aria-label="View More">View More</a>
-                            </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
+                        <div class="card-body">
+                            <h4 class="card-title mb-3">Tech Stewardship for the Energy Transition Program - Energy Futures Lab</h4>
+                            <hr>
+                            <a class="btn btn-outline-dark btn-md" href="images/pro4.jpg" target="_blank" aria-label="View More">View More</a>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
-                            <div class="card-body">
-                                <h4 class="card-title mb-3">CPR/AED/First Aid - St. John Ambulance Canada | Ambulance Saint-Jean</h4>
-                                <hr>
-                                <a class="btn btn-outline-dark btn-md" href="images/pro1.jpg" target="_blank" aria-label="View More">View More</a>
-                            </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
+                        <div class="card-body">
+                            <h4 class="card-title mb-3">CPR/AED/First Aid - St. John Ambulance Canada | Ambulance Saint-Jean</h4>
+                            <hr>
+                            <a class="btn btn-outline-dark btn-md" href="images/pro1.jpg" target="_blank" aria-label="View More">View More</a>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
-                            <div class="card-body">
-                                <h4 class="card-title mb-3">Certified Associate in Project Management - Project Management Institute</h4>
-                                <hr>
-                                <a class="btn btn-outline-dark btn-md" href="images/pro2.jpg" target="_blank" aria-label="View More">View More</a>
-                            </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
+                        <div class="card-body">
+                            <h4 class="card-title mb-3">Certified Associate in Project Management - Project Management Institute</h4>
+                            <hr>
+                            <a class="btn btn-outline-dark btn-md" href="images/pro2.jpg" target="_blank" aria-label="View More">View More</a>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
-                            <div class="card-body">
-                                <h4 class="card-title mb-3">Certified Solidworks Associate CSWA (Mechanical Design) - Dassault Systèmes</h4>
-                                <hr>
-                                <a class="btn btn-outline-dark btn-md" href="images/pro3.jpg" target="_blank" aria-label="View More">View More</a>
-                            </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
+                        <div class="card-body">
+                            <h4 class="card-title mb-3">Certified Solidworks Associate CSWA (Mechanical Design) - Dassault Systèmes</h4>
+                            <hr>
+                            <a class="btn btn-outline-dark btn-md" href="images/pro3.jpg" target="_blank" aria-label="View More">View More</a>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
-                            <div class="card-body">
-                                <h4 class="card-title mb-1" style="margin-bottom: 0.5rem;">Machine Learning</h4>
-                                <h4 class="card-title mb-1" style="margin-top: 0;">Stanford University</h4>
-                                <hr>
-                            </div>
-                            <a class="btn btn-outline-dark btn-md" href="images/pro5.jpg" target="_blank" aria-label="View More">View More</a>
+                </div>
+                <div class="col-md-6">
+                    <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
+                        <div class="card-body">
+                            <h4 class="card-title mb-1" style="margin-bottom: 0.5rem;">Machine Learning</h4>
+                            <h4 class="card-title mb-1" style="margin-top: 0;">Stanford University</h4>
+                            <hr>
                         </div>
+                        <a class="btn btn-outline-dark btn-md" href="images/pro5.jpg" target="_blank" aria-label="View More">View More</a>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     </div>
     <!-- Professional Certifications END -->
