--- a/index.html
+++ b/index.html
@@ -215,19 +215,23 @@
                     </div>
                     <div class="col-md-6">
                         <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
-                            <div class="card-body">
-                                <h4 class="card-title mb-3">Certified Solidworks Associate CSWA (Mechanical Design) - Dassault Systèmes</h4>
-                                <hr>
-                                <a class="btn btn-outline-dark btn-md" href="images/pro3.jpg" target="_blank" aria-label="View More">View More</a>
+                            <div class="col-md-6">
+                                <div class="card shadow-lg p-3 mb-5 bg-white rounded">
+                                    <div class="card-body">
+                                        <h4 class="card-title mb-3">Certified Solidworks Associate CSWA (Mechanical Design) - Dassault Systèmes</h4>
+                                        <hr>
+                                        <a class="btn btn-outline-dark btn-md" href="images/pro3.jpg" target="_blank" aria-label="View More">View More</a>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card shadow-lg p-3 mb-5 bg-white rounded card">
-                            <div class="card-body">
-                                <h4 class="card-title mb-1" style="margin-bottom: 0.5rem;">Machine Learning</h4>
-                                <h4 class="card-title mb-1" style="margin-top: 0;">Stanford University</h4>
-                                <hr>
+                            <div class="col-md-6">
+                                <div class="card shadow-lg p-3 mb-5 bg-white rounded">
+                                    <div class="card-body">
+                                        <h4 class="card-title mb-3">Machine Learning - Stanford University</h4>
+                                        <hr>
+                                        <a class="btn btn-outline-dark btn-md" href="images/pro5.jpg" target="_blank" aria-label="View More">View More</a>
+                                    </div>
+                                </div>
                             </div>
                             <a class="btn btn-outline-dark btn-md" href="images/pro5.jpg" target="_blank" aria-label="View More">View More</a>
                         </div>
