--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <!-- HEADER START -->
-    <header class="web-header" style="background-color: blue;">
+    <header class="web-header" style="background-color: rgb(0, 85, 255);">
         <nav class="px-3 fixed-top navbar-nav-scroll navbar-transparent navbar navbar-expand-lg navbar-light">
             <a href="index.html" class="navbar-brand">Abdul Rafeh</a>
             <button aria-controls="basic-navbar-nav" type="button" aria-label="Toggle navigation" class="toggler navbar-toggler collapsed">
