--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             <div class="card-body">
                                 <h4 class="card-title mb-3">Data Analyst Professional Certificate - IBM</h4>
                                 <hr>
-                                <a class="btn btn-outline-dark btn-md" href="images/pro4.jpg" target="_blank" aria-label="View More">View More</a>
+                                <a class="btn btn-outline-dark btn-md" href="images/pro6.jpeg" target="_blank" aria-label="View More">View More</a>
                             </div>
                         </div>
                     </div>
