--- a/index.html
+++ b/index.html
@@ -270,6 +270,8 @@
                                 <div class="d-block">Skills:
                                     <span class="badge bg-light text-dark">Computer-Aided Design (CAD)</span>
                                     <span class="badge bg-light text-dark">Embedded Programming (Python)</span>
+                                    <span class="badge bg-light text-dark">JavaScript</span>
+                                    <span class="badge bg-light text-dark">C++</span>
                                 </div>
                             </div>
                         </div>
