--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                         (including scripting with tools like GREP, SED, and AWK), C++, and Amazon Web Services (AWS). I am proficient with data formats such as JSON and XML, which are crucial for data validation and transfer processes. I thrive in fast-paced
                         environments, adapting quickly to changing priorities while maintaining strong organizational and time management skills. My experience spans multiple operating systems, including Linux, MacOS, and Windows, enabling adaptability
                         in diverse software environments. Additionally, my proficiency with platforms like GitHub and GitLab highlights my ability to collaborate effectively and manage code efficiently in team-based settings. Moreover, my expertise in
-                        SQL and various relational database systems, including PostgreSQL and AirTable, equips me with the skills to manage and analyze data efficiently. I am passionate about fighting financial crime and am eager to leverage my technical
-                        and customer support skills in cross-functional collaborations to deliver effective solutions.
+                        SQL and various relational database systems, including PostgreSQL and AirTable, equips me with the skills to manage and analyze data efficiently. I am passionate and eager to leverage my technical and customer support skills in
+                        cross-functional collaborations to deliver effective solutions.
                     </p>
                     <p class="lead text-center">
                         <a class="btn btn-outline-dark btn-lg" href="#" target="_blank" aria-label="Resume/CV">Resume</a>
