--- a/index.html
+++ b/index.html
@@ -264,7 +264,9 @@
                         <div class="card shadow-lg p-3 bg-white rounded card h-100">
                             <div class="card-body">
                                 <h3 class="card-title">Hacking Health Hackathon</h3>
-                                <p class="card-text">Designed prototypes for an obstacle avoidance device for wheelchairs using a series of mountable sensors as a team. Tested prototypes with clients to ensure the safety of the operator and altered CAD design where necessary.</p>
+                                <p class="card-text">Contributed to the development of an innovative obstacle avoidance device for wheelchairs. Collaborated with a team, designed and prototyped the system using mountable sensors, and prioritized operator safety and mobility.
+                                    The role involved using Computer-Aided Design (CAD) to create and refine models based on client feedback from real-world testing. Demonstrated problem-solving skills by adapting designs as needed to ensure the solution
+                                    effectively met practical needs and enhanced accessibility. With proficiency in embedded programming (Python) and C++, optimized sensor performance, while applying JavaScript skills to develop a user-friendly interface..</p>
                                 <hr>
                                 <div class="d-block">Skills:
                                     <span class="badge bg-light text-dark">Computer-Aided Design (CAD)</span>
