--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
     <footer class="mt-auto py-5 text-center">
         <div class="container">
             <h2 class="display-4 pb-3 text-center">Get In Touch</h2>
-            <p class="lead text-center pb-3">I’m currently looking for software engineering opportunities. <br>If you know of any positions available, please email me at
+            <p class="lead text-center pb-3">I’m currently looking for full-time opportunities. <br>If you know of any positions available, please email me at
                 <a class="text-decoration-none" href="mailto:arrahat@mun.ca" style="color: blue;">arrahat@mun.ca</a>
             </p>
         </div>
