--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </p>
                     <hr>
                     <p class="lead text-center">
-                        Bachelor of Engineering (Process) - Memorial University of Newfoundland (Co-op Program) - September 2019 - September 2023 - St. John's, NL
+                        Bachelor of Engineering (Process) - Memorial University of Newfoundland (Co-op Program) - September 2019 - Present - St. John's, NL
                     </p>
                     <hr>
                     <p class="lead text-center">
@@ -109,7 +109,7 @@
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                         <div class="card-body">
                             <h4 class="card-title py-3">Full-Stack Developer <br>Plansane.com</h4>
-                            <span class="btn btn-outline-secondary mb-3">August 2022 - Present</span>
+                            <span class="btn btn-outline-secondary mb-3">August 2023 - Present</span>
                             <hr>
                             <div class="pt-3">
                                 <img class="experience-img" src="images/experiences-img1.png" alt="profilepicture">
@@ -121,7 +121,7 @@
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                         <div class="card-body">
                             <h4 class="card-title py-3">Process Safety Engineering Intern <br>Vale Base Metals</h4>
-                            <span class="btn btn-outline-secondary mb-3">January 2023 - August 2023</span>
+                            <span class="btn btn-outline-secondary mb-3">January 2023 - May 2023</span>
                             <hr>
                             <div class="pt-3">
                                 <img class="experience-img" src="images/experiences-img2.png" alt="profilepicture">
@@ -133,7 +133,7 @@
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                         <div class="card-body">
                             <h4 class="card-title py-3">Co-op Engineering Student <br>Hibernia Enhanced Oil Recovery Group</h4>
-                            <span class="btn btn-outline-secondary mb-3">May 2022 - August 2022</span>
+                            <span class="btn btn-outline-secondary mb-3">Sept 2024 - Dec 2024</span>
                             <hr>
                             <div class="pt-3">
                                 <img class="experience-img" src="images/experiences-img3.png" alt="profilepicture">
