--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <div class="banner-detail">
             <div class="container">
                 <h1 class="display-1">Abdul Rafeh Rahat</h1>
-                <p>AN ENGINEER DRIVEN TO RESULTS</p>
+                <p>An Engineer Driven To Results</p>
                 <div class="p-5 social-icons">
                     <a target="_blank" href="https://www.linkedin.com/in/arafehr/" aria-label="My linkedin"><i class="fab fa-linkedin fa-3x socialicons"></i></a>
                     <a target="_blank" href="mailto:arrahat@mun.ca" aria-label="My email"><i class="fa-regular fa-envelope fa-3x socialicons"></i></a>
                     <a target="_blank" href="https://github.com/arafehr" aria-label="My github"><i class="fab fa-github fa-3x socialicons"></i></a>
                 </div>
-                <a class="btn btn-outline-light btn-lg" href="#aboutme" role="button" aria-label="Learn more about me">More about me</a>
+                <a class="btn btn-outline-light btn-lg" href="#aboutme" role="button" aria-label="Learn more about me">More About Me</a>
             </div>
         </div>
     </section>
@@ -87,11 +87,11 @@
                     </p>
                     <hr>
                     <p class="lead text-center">
-                        Bachelor of Engineering (Process) - Memorial University of Newfoundland (Co-op Program) - September 2019 - Present - St. John's, NL
+                        Bachelor of Engineering (Process) - Memorial University of Newfoundland (Co-op Program) - September 2019 - March 2023 - St. John's, NL
                     </p>
                     <hr>
                     <p class="lead text-center">
-                        Machine Learning - Stanford University - December 2020 - March 2021
+                        Bachelor of Chemical Engineering - Kansas State University - 2016 - 2018 - Manhattan, KS
                     </p>
                 </div>
             </div>
@@ -108,11 +108,11 @@
                 <div class="col-md-6">
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                         <div class="card-body">
-                            <h4 class="card-title py-3">Full-Stack Developer <br>Plansane.com</h4>
+                            <h4 class="card-title py-3">Technical Services Engineering Intern <br>Braya Renewable Fuels</h4>
                             <span class="btn btn-outline-secondary mb-3">August 2023 - Present</span>
                             <hr>
                             <div class="pt-3">
-                                <img class="experience-img" src="images/experiences-img1.png" alt="profilepicture">
+                                <img class="experience-img" src="images/site_rep.jpg" alt="profilepicture">
                             </div>
                         </div>
                     </div>
