--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 </div>
                 <div class="col-md-6 mb-5">
                     <div class="d-flex justify-content-between">
-                        <h6>Solidworks</h6>
+                        <h6>SolidWorks</h6>
                         <h6>100%</h6>
                     </div>
                     <div class="progress">
@@ -368,7 +368,7 @@
                 </div>
                 <div class="col-md-6 mb-5">
                     <div class="d-flex justify-content-between">
-                        <h6>SQL</h6>
+                        <h6>Bluebeam</h6>
                         <h6>100%</h6>
                     </div>
                     <div class="progress">
