--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </p>
                     <hr>
                     <p class="lead text-center">
-                        Bachelor of Chemical Engineering - Kansas State University - 2016 - 2018 - Manhattan, KS
+                        Bachelor of Chemical Engineering (Completed 42 credit hours) - Kansas State University - 2016 - 2018 - Manhattan, KS
                     </p>
                 </div>
             </div>
